# 8-bit-sim

./: .gitmodules  CMakeLists.txt  Justfile  LICENSE
MonitorTester_FPGA/: CMakeLists.txt  Monitor_Tester.v  VGA.v  bouncingSquare.v  clock_div.v  clock_divider.v  clock_divider_bb.v  debounce.v  fillColorPattern.v  gradient.v  gridPattern.v  hSync.v  my_dff.v  tvPattern.v  vSync.v
cpu/: CMakeLists.txt
cpu/cpu/: cpu.v
gpu/: CMakeLists.txt
gpu/gpu/: gpu.sv  ram.v
resources/font/: font.mem  palette.mem
simulator/: CMakeLists.txt  clockable_module.hpp  main.cpp  vga_simulator.hpp
src/: CMakeLists.txt
src/gpu/: gpu.sv  vga_controller.sv
tests/: CMakeLists.txt
tests/cpu/: cpu_test.cpp
tests/gpu/: CMakeLists.txt  gpu_test.cpp
tools/: bin_to_mem.py
